--- a/smiteproject/SmiteAPI_Mobile.css
+++ b/smiteproject/SmiteAPI_Mobile.css
@@ -65,4 +65,8 @@
     .btn-group {
         display: flex;
     }
+    .btn-toolbar .input-group {
+        width: 90%;
+        padding-top: 1rem;
+    }
 }
